Add banner section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo-sect">
-            <div class="logo-text"></div>
+            <div class="logo-text">yo</div>
         </div>
     </div>
 </body>
