--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <div class="container">
         <div class="logo-sect">
-            <div class="logo-text">yo</div>
+            <div class="logo-text">
+                <img src="https://cdn.pixabay.com/photo/2012/04/03/15/11/pineapple-25251__340.png" alt="pineapple image">
+                <h1>Pineapple Fanclub</h1>
+            </div>
         </div>
     </div>
 </body>
 </html>
-
-<!--<img src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="floral-img">-->
