--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo-sect">
             <div class="logo-text">
                 <img src="https://cdn.pixabay.com/photo/2012/04/03/15/11/pineapple-25251__340.png" alt="pineapple image">
-                <h1>Pineapple Fanclub</h1>
+                <h1>PINEAPPLE FANCLUB</h1>
             </div>
         </div>
     </div>
