--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <h1>PINEAPPLE FANCLUB</h1>
             </div>
         </div>
+        <div class="form-sect">
+            <p>This is not a real online service! You know you need a community based around a collective love of pineapples.<br>Sign up <em>now</em> to get started.</p>
+        </div>
     </div>
 </body>
 </html>
