Add font styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="form-sect">
-            <p>This is not a real online service! You know you need a community based around a collective love of pineapples.<br>Sign up <em>now</em> to get started.</p>
+            <p>This is not a real online service! You know you need a community based around a collective love of pineapples.<br>Sign up <span class="bold">now</span> to get started.</p>
         </div>
     </div>
 </body>
