Adjust text layout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="logo-sect">
             <div class="logo-text">
                 <img src="https://cdn.pixabay.com/photo/2012/04/03/15/11/pineapple-25251__340.png" alt="pineapple image">
-                <h1>PINEAPPLE FANCLUB</h1>
+                <h1>PINEAPPLE<br>FANCLUB</h1>
             </div>
         </div>
         <div class="form-sect">
             <p>This is not a real online service! You know you need a community based around a collective love of pineapples.<br>Sign up <span class="bold">now</span> to get started.</p>
+            <p>You <span class="bold">know</span> you want to.</p>
         </div>
     </div>
 </body>
