--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             </div>
         </div>
         <div class="form-sect">
-            <p>This is not a real online service! You know you need a community based around a collective love of pineapples.<br>Sign up <span class="bold">now</span> to get started.</p>
-            <p>You <span class="bold">know</span> you want to.</p>
+            <p>This is not a real online service! You know you need a community based around a collective love of pineapples.</p>
+            <p>Sign up <span class="bold">now</span> to get started.</p>
+            <p class="spaced-para">You <span class="bold">know</span> you want to.</p>
         </div>
     </div>
 </body>
