--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
             <p>This is not a real online service! You know you need a community based around a collective love of pineapples.</p>
             <p>Sign up <span class="bold">now</span> to get started.</p>
             <p class="spaced-para">You <span class="bold">know</span> you want to.</p>
+            <form action="#" method="post"></form>
+                <div class="form-container">
+                    <p>Let's do this!</p>
+                    <div class="input-container">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="first-name" id="first-name" required>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </body>
