--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
             <form action="#" method="post"></form>
                 <div class="form-container">
                     <p>Let's do this!</p>
-                    <div class="input-container">
-                        <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="first-name" id="first-name" required>
+                    <div class="form-inputs">
+                        <div class="input-container">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" name="first-name" id="first-name" required>
+                        </div>
+                        <div class="input-container">
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" name="last-name" id="last-name" required>
+                        </div>
                     </div>
                 </div>
             </form>
