--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
                             <label for="last-name">LAST NAME</label>
                             <input type="text" name="last-name" id="last-name" required>
                         </div>
+                        <div class="input-container">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email" required>
+                        </div>
+                        <div class="input-container">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="text" name="phone-number" id="phone-number">
+                        </div>
+                        <div class="input-container">
+                            <label for="password">PASSWORD</label>
+                            <input type="text" name="password" id="password" required>
+                        </div>
+                        <div class="input-container">
+                            <label for="password-confirm">CONFIRM PASSWORD</label>
+                            <input type="text" name="password-confirm" id="password-confirm" required>
+                        </div>
                     </div>
                 </div>
             </form>
