Add submit button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                         </div>
                     </div>
                 </div>
+                <button type="submit">Create Account</button>
             </form>
+            <p>Already have an account? <a href="#">Log in</a></p>
         </div>
     </div>
 </body>
