Fix form submit bug

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>This is not a real online service! You know you need a community based around a collective love of pineapples.</p>
             <p>Sign up <span class="bold">now</span> to get started.</p>
             <p class="spaced-para">You <span class="bold">know</span> you want to.</p>
-            <form action="#" method="post"></form>
+            <form action="#" method="post">
                 <div class="form-container">
                     <p>Let's do this!</p>
                     <div class="form-inputs">
