--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>This is not a real online service! You know you need a community based around a collective love of pineapples.</p>
             <p>Sign up <span class="bold">now</span> to get started.</p>
             <p class="spaced-para">You <span class="bold">know</span> you want to.</p>
-            <form id="my-form" action="http://httpbin.org/post" method="post">
+            <form id="my-form" action="#" method="post">
                 <div class="form-container">
                     <p>Let's do this!</p>
                     <div class="form-inputs">
